// ============================================
// Antigravity - Film-Datenbank Schema
// ============================================

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  schemas  = ["film"]
}

// ============================================
// User Model - Basis für Authentifizierung
// ============================================
model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  username  String?
  role      Role     @default(USER)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relationen
  reviews   Review[]
  favorites Favorite[]

  @@map("user")
  @@schema("film")
}

// ============================================
// Film Model - Hauptentität
// ============================================
model Film {
  id          Int       @id @default(autoincrement())
  version     Int       @default(0)
  titel       String
  originaltitel String? @map("originaltitel")
  genre       Genre[]
  regisseur   String?
  erscheinungsjahr Int?  @map("erscheinungsjahr")
  dauer       Int?      // Laufzeit in Minuten
  bewertung   Decimal?  @db.Decimal(3, 1) // z.B. 8.5
  beschreibung String?  @db.Text
  sprache     String?
  land        String?
  poster      String?   // URL zum Poster
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  // Relationen
  reviews   Review[]
  favorites Favorite[]

  @@map("film")
  @@schema("film")
}

// ============================================
// Review Model - Nutzerbewertungen
// ============================================
model Review {
  id        Int      @id @default(autoincrement())
  version   Int      @default(0)
  filmId    Int      @map("film_id")
  userId    Int      @map("user_id")
  bewertung Int      // 1-10
  kommentar String?  @db.Text
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relationen
  film Film @relation(fields: [filmId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([filmId, userId]) // Ein User kann pro Film nur ein Review schreiben
  @@index([filmId])
  @@index([userId])
  @@map("review")
  @@schema("film")
}

// ============================================
// Favorite Model - Favoritenliste
// ============================================
model Favorite {
  id        Int      @id @default(autoincrement())
  filmId    Int      @map("film_id")
  userId    Int      @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")

  // Relationen
  film Film @relation(fields: [filmId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([filmId, userId])
  @@index([filmId])
  @@index([userId])
  @@map("favorite")
  @@schema("film")
}

// ============================================
// Enums
// ============================================
enum Role {
  USER
  ADMIN

  @@schema("film")
}

enum Genre {
  ACTION
  COMEDY
  DRAMA
  HORROR
  SCIFI
  THRILLER
  ROMANCE
  DOCUMENTARY
  ANIMATION
  FANTASY

  @@schema("film")
}
